<resources>
    <string name="app_name">Obeds Chess</string>
    <string name="start_game">Start Game</string>
    <string name="Rule_button">Rules</string>
    <string name="boardBackground">Board Background</string>
    <string name="CoverPic">A cover picture</string>
    <string name="Moves">Moving Rule</string>
    <string name="BasicMoves">Basic moves</string>
    <string name="BasicMovesRule">Each type of chess piece has its own method of movement. A piece moves to a vacant square except when capturing an opponent\'s piece.
Except for any move of the knight and castling, pieces cannot jump over other pieces. A piece is captured (or taken) when an attacking enemy piece replaces it on its square (en passant is the only exception). The captured piece is thereby permanently removed from the game.[1] The king can be put in check but cannot be captured (see below).
The king moves exactly one square horizontally, vertically, or diagonally. A special move with the king known as castling is allowed only once per player, per game (see below).
A rook moves any number of vacant squares horizontally or vertically. It also is moved when castling.
A bishop moves any number of vacant squares diagonally.
The queen moves any number of vacant squares horizontally, vertically, or diagonally.
A knight moves to the nearest square not on the same rank, file, or diagonal. (This can be thought of as moving two squares horizontally then one square vertically, or moving one square horizontally then two squares vertically—i.e. in an "L" pattern.) The knight is not blocked by other pieces: it jumps to the new location.
Pawns have the most complex rules of movement:
A pawn moves straight forward one square, if that square is vacant. If it has not yet moved, a pawn also has the option of moving two squares straight forward, provided both squares are vacant. Pawns cannot move backwards.
Pawns are the only pieces that capture differently from how they move. A pawn can capture an enemy piece on either of the two squares diagonally in front of the pawn (but cannot move to those squares if they are vacant).
The pawn is also involved in the two special moves en passant and promotion (Schiller 2003:17–19).</string>
    <string name="Promotion">Pawn promotion</string>
    <string name="PromotionRule">If a player advances a pawn to its eighth rank, the pawn is then promoted (converted) to a queen, rook, bishop, or knight of the same color at the choice of the player (a queen is usually chosen). The choice is not limited to previously captured pieces. Hence it is theoretically possible for a player to have up to nine queens or up to ten rooks, bishops, or knights if all of their pawns are promoted. If the desired piece is not available, the player should call the arbiter to provide the piece (Schiller 2003:17–19).</string>
    <string name="EndofTheGame">End of the game</string>
    <string name="Checkmate">Checkmate</string>
    <string name="CheckmateRule">If a player\'s king is placed in check and there is no legal move that player can make to escape check, then the king is said to be checkmated, the game ends, and that player loses (Schiller 2003:20–21). Unlike other pieces, the king is never actually captured or removed from the board because checkmate ends the game (Burgess 2009:502).
The diagram shows an example checkmate position. The white king is threatened by the black queen; the square to which the king could move is also threatened; it cannot capture the queen, because it would then be in check by the rook.</string>
    <string name="Resign">Resign</string>
    <string name="ResignRule">Either player may resign at any time and their opponent wins the game. Players typically resign when they believe they are very likely to lose the game. A player may resign by saying it verbally or by indicating it on their score sheet in any of three ways: (1) by writing "resigns", (2) by circling the result of the game, or (3) by writing "1–0" if Black resigns or "0–1" if White resigns (Schiller 2003:21). Tipping over the king also indicates resignation, but it is not frequently used (and should be distinguished from accidentally knocking the king over). Stopping both clocks is not an indication of resigning, since clocks can be stopped to call the arbiter. An offer of a handshake is not necessarily a resignation either, since one player could think they are agreeing to a draw.</string>
    <string name="playVSInfo">Player 1 V.S. Player 2</string>
<!--    <string name="restart">Restart Game</string>-->
    <string name="ResignButton">Resign</string>
    <string name="GameOver">Game Over</string>
    <string name="StartOver">Start Over</string>
    <string name="Quit">Quit</string>
    <string name="name1">player 1\'s name</string>
    <string name="name2">player 2\'s name</string>
    <string name="welcome">Welcome to the Chess Game</string>
    <string name="done">Done</string>
    <string name="turn_header_suffix">%s\'s Turn\n[Move %s]</string>
    <string name="Winner">Winner: %s</string>
    <string name="Loser">Loser: %s</string>

</resources>
