<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/CoverPic"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:contentDescription="@string/CoverPic"
        app:srcCompat="@drawable/chess_bdt45" />

    <Button
        android:id="@+id/rule"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onShowRules"
        android:text="@string/Rule_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name1"


            android:ems="10"
            android:hint="@string/name1"
            android:inputType="textPersonName"
            tools:ignore="NestedWeights"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name2"
            android:inputType="textPersonName"
            android:autofillHints="@string/name2"
            tools:targetApi="o" />
    </LinearLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:enabled="false"
        android:onClick="onStartGame"
        android:text="@string/start_game" />

</LinearLayout>