<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".GameActivity"
android:orientation="vertical"
android:baselineAligned="false">

    <TextView
        android:id="@+id/player_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_now"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/playVSInfo"
        android:textSize="20sp"
        android:textStyle="bold" />

    <view
        android:id="@+id/gameView"
        class="edu.blucrest.obed.assignment.GameView"
        android:layout_width="match_parent"
        android:layout_height="820dp"
        android:layout_above="@id/surrenderButton"
        android:layout_below="@+id/player"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="2dp"
        android:gravity="center" />

    <Button
        android:id="@+id/surrenderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/doneButton"
        android:onClick="onQuit"
        android:text="@string/ResignButton" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onDone"
        android:text="@string/done" />


</RelativeLayout>